# workspace

./: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  catkin_make.cache  cmake_install.cmake
devel/: _setup_util.py  local_setup.sh  setup.sh
devel/lib/opencv_line_detection/: ros_opencv_line_detection_node
devel/lib/pkgconfig/: opencv_line_detection.pc  sc_mini.pc
devel/share/opencv_line_detection/cmake/: opencv_line_detectionConfig.cmake
devel/share/sc_mini/cmake/: sc_miniConfig.cmake
src-20250207T112151Z-001/src/opencv_line_detection/: CMakeLists.txt
src-20250207T112151Z-001/src/opencv_line_detection/src/: opencv_line_detect.cpp  opencv_line_detect_racer.cpp
src-20250207T112151Z-001/src/sc_mini/launch/: sc_mini_test.launch
src/opencv_line_detection/: package.xml
